<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:style="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:text="@string/my_nanodegree_apps"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/spotify_streamer"
        style="@style/blue_button"
        android:text="@string/spotify_streamer"
        android:layout_below="@+id/title" />

    <Button
        android:id="@+id/scores_app"
        style="@style/blue_button"
        android:text="@string/scores_app"
        android:layout_below="@+id/spotify_streamer" />

    <Button
        android:id="@+id/library_app"
        style="@style/blue_button"
        android:text="@string/library_app"
        android:layout_below="@+id/scores_app" />

    <Button
        android:id="@+id/build_it_bigger"
        style="@style/blue_button"
        android:text="@string/build_it_bigger"
        android:layout_below="@+id/library_app" />

    <Button
        android:id="@+id/xyz_reader"
        style="@style/blue_button"
        android:text="@string/xyz_reader"
        android:layout_below="@+id/build_it_bigger" />

    <Button
        android:id="@+id/capstone"
        style="@style/blue_button"
        android:background="@drawable/dark_blue_button"
        android:text="@string/capstone"
        android:layout_below="@+id/xyz_reader" />

</RelativeLayout>
